--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,7 +17,8 @@ extends =
 
 # Packages to check out/update when buildout is run
 auto-checkout =
-    
+    optilux.policy
+
 # Make sure buildout always attempts to update packages
 always-checkout = force
 
