--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 bin
 build
 develop-eggs
+coverage
 downloads
 eggs
 fake-eggs
@@ -13,6 +14,7 @@ parts
 dist
 .installed.cfg
 .mr.developer.cfg
+var
 .hg
 .bzr
 .svn
