--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,5 @@
-##############################################################################
 # Development environment buildout
-##############################################################################
+# ================================
 
 [buildout]
 parts =
@@ -9,11 +8,16 @@ parts =
     coverage-report
     omelette
     zopepy
+    zopeskel
     checkversions
+    mkrelease
 
 extends =
     packages.cfg
 
+# Packages to check out/update when buildout is run
+auto-checkout =
+    
 # Make sure buildout always attempts to update packages
 always-checkout = force
 
@@ -27,28 +31,30 @@ eggs =
     ${eggs:main}
     ${eggs:devtools}
 
-# Test runner. Installs the ``bin/test`` script
+# Test runner. Run: ``bin/test`` to execute all tests
 [test]
 recipe = zc.recipe.testrunner
 eggs = ${eggs:test}
-defaults = ['--exit-with-status', '--auto-color', '--auto-progress']
+defaults = ['--auto-color', '--auto-progress']
 
-# Coverage report generator. Run ``bin/test --coverage=coverage`` and then ``bin/coveragereport``
+# Coverage report generator.
+# Run: ``bin/test --coverage=coverage``
+# and then: ``bin/coveragereport``
 [coverage-report]
 recipe = zc.recipe.egg
 eggs = z3c.coverage
 scripts = coveragereport
 arguments = ('parts/test/coverage', 'coverage')
 
-# Installs symbolic links for all installed packages to parts/omelette.
-# On Windows, you need to install junction.exe first if you want to use this.
+# Installs links to all installed packages to ``parts/omelette``.
+# On Windows, you need to install junction.exe first
 [omelette]
 recipe = collective.recipe.omelette
 eggs = 
     ${eggs:main}
     ${eggs:devtools}
 
-# Interpreter. Installs the ``bin/zopepy`` script.
+# Installs the ``bin/zopepy`` interpreter.
 [zopepy]
 recipe = zc.recipe.egg
 eggs = 
@@ -56,7 +62,20 @@ eggs =
     ${eggs:devtools}
 interpreter = zopepy
 
-# Tool to help check for new versions. Run ``bin/checkversions versions.cfg``
+# Installs ZopeSkel, which can be used to create new packages
+# Run: ``bin/zopeskel``
+[zopeskel]
+recipe = zc.recipe.egg
+eggs = ZopeSkel
+
+# Tool to help check for new versions.
+# Run: ``bin/checkversions versions.cfg``
 [checkversions]
 recipe = zc.recipe.egg
 eggs = z3c.checkversions [buildout]
+
+# Tool to make releases
+# Run: ``bin/mkrelease --help``
+[mkrelease]
+recipe = zc.recipe.egg
+eggs = jarn.mkrelease
