--- a/packages.cfg
+++ b/packages.cfg
@@ -1,28 +1,24 @@
-##############################################################################
-# Information about packages and known good version sets we are using
-##############################################################################
+# Information about packages and known good version sets
+# ======================================================
 
 [buildout]
 extensions = mr.developer buildout.dumppickedversions
 extends = 
 # Known good sets of eggs we may be using
-    http://dist.plone.org/release/4.0b5/versions.cfg
+    http://dist.plone.org/release/4.1a2/versions.cfg
     versions.cfg
 
-# Packages to check out/update when buildout is run
-auto-checkout =
-    
 versions = versions
 unzip = true
 
 # Egg sets
 [eggs]
 main =
+    Plone
 test = 
 devtools =
     bpython
     plone.reload
-    stxnext.pdb
     Products.PDBDebugMode
     Products.PrintingMailHost
     Products.DocFinderTab
