--- a/versions.cfg
+++ b/versions.cfg
@@ -1,15 +1,25 @@
-##############################################################################
 # Project-specific version pins
-##############################################################################
+# =============================
 
 [versions]
+# Buildout
 mr.developer = 1.15
+collective.recipe.omelette = 0.9
+
+# Development tools
 bpython = 0.9.7.1
-Pygments = 1.3.1
+pygments = 1.3.1
 Products.DocFinderTab = 1.0.4
 Products.PDBDebugMode = 1.1
 Products.PrintingMailHost = 0.7
-collective.recipe.omelette = 0.9
-stxnext.pdb = 0.2.1
-stxnext.log = 0.2.0
 z3c.coverage = 1.2.0
+jarn.mkrelease = 3.0.8
+setuptools-git = 0.3.4
+setuptools-hg = 0.2
+
+# ZopeSkel
+ZopeSkel = 2.17
+Cheetah = 2.2.1
+Paste = 1.7.4
+PasteScript = 1.7.3
+PasteDeploy = 1.3.3
