--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,7 @@ extends =
 # Packages to check out/update when buildout is run
 auto-checkout =
     optilux.policy
+    optilux.theme
 
 # Make sure buildout always attempts to update packages
 always-checkout = force
