--- a/packages.cfg
+++ b/packages.cfg
@@ -6,6 +6,7 @@ extensions = mr.developer buildout.dumppickedversions
 extends = 
 # Known good sets of eggs we may be using
     http://dist.plone.org/release/4.1/versions.cfg
+    http://good-py.appspot.com/release/plone.app.theming/1.0b8?plone=4.1
     versions.cfg
 
 versions = versions
@@ -17,6 +18,7 @@ main =
     optilux.policy
 test = 
     optilux.policy [test]
+    optilux.theme [test]
 devtools =
     bpython
     plone.reload
@@ -27,3 +29,4 @@ devtools =
 # Checkout locations
 [sources]
 optilux.policy = fs optilux.policy
+optilux.theme  = fs optilux.theme
