--- a/packages.cfg
+++ b/packages.cfg
@@ -7,6 +7,7 @@ extends =
 # Known good sets of eggs we may be using
     http://dist.plone.org/release/4.1/versions.cfg
     http://good-py.appspot.com/release/plone.app.theming/1.0b8?plone=4.1
+    http://good-py.appspot.com/release/dexterity/1.0.1?plone=4.1
     versions.cfg
 
 versions = versions
@@ -19,6 +20,7 @@ main =
 test = 
     optilux.policy [test]
     optilux.theme [test]
+    optilux.cinemacontent [test]
 devtools =
     bpython
     plone.reload
@@ -28,5 +30,6 @@ devtools =
 
 # Checkout locations
 [sources]
-optilux.policy = fs optilux.policy
-optilux.theme  = fs optilux.theme
+optilux.policy        = fs optilux.policy
+optilux.theme         = fs optilux.theme
+optilux.cinemacontent = fs optilux.cinemacontent
