--- a/packages.cfg
+++ b/packages.cfg
@@ -19,6 +19,7 @@ main =
 test = 
     optilux.policy [test]
     optilux.theme [test]
+    optilux.cinemacontent [test]
 devtools =
     bpython
     plone.reload
@@ -28,5 +29,6 @@ devtools =
 
 # Checkout locations
 [sources]
-optilux.policy = fs optilux.policy
-optilux.theme  = fs optilux.theme
+optilux.policy        = fs optilux.policy
+optilux.theme         = fs optilux.theme
+optilux.cinemacontent = fs optilux.cinemacontent
