--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,6 +33,12 @@ verbose-security = on
 eggs =
     ${eggs:main}
     ${eggs:devtools}
+zcml-additional =
+   <configure xmlns="http://namespaces.zope.org/zope" xmlns:db="http://namespaces.zope.org/db">
+       <include package="z3c.saconfig" file="meta.zcml" />
+       <db:engine name="optilux" url="mysql://root@localhost/optilux" />
+       <db:session engine="optilux" />
+   </configure>
 
 # Test runner. Run: ``bin/test`` to execute all tests
 [test]
