--- a/versions.cfg
+++ b/versions.cfg
@@ -29,3 +29,9 @@ Products.PloneFormGen = 1.6.0
 Products.PythonField = 1.1.3
 Products.TALESField = 1.1.3
 Products.TemplateFields = 1.2.5
+
+# SQLAlchemy
+SQLAlchemy = 0.6.6
+zope.sqlalchemy = 0.6.1
+z3c.saconfig = 0.12
+MySQL-python = 1.2.3
