--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,6 +20,7 @@ auto-checkout =
     optilux.policy
     optilux.theme
     optilux.cinemacontent
+    optilux.facebookauth
 
 # Make sure buildout always attempts to update packages
 always-checkout = force
@@ -39,6 +40,14 @@ zcml-additional =
        <db:engine name="optilux" url="mysql://root@localhost/optilux" />
        <db:session engine="optilux" />
    </configure>
+zope-conf-additional =
+    <product-config beaker>
+        session.type            file
+        session.data_dir        ${buildout:directory}/var/sessions/data
+        session.lock_dir        ${buildout:directory}/var/sessions/lock
+        session.key             beaker.session
+        session.secret          secret
+    </product-config>
 
 # Test runner. Run: ``bin/test`` to execute all tests
 [test]
