--- a/packages.cfg
+++ b/packages.cfg
@@ -22,6 +22,7 @@ test =
     optilux.policy [test]
     optilux.theme [test]
     optilux.cinemacontent [test]
+    optilux.facebookauth [test]
 devtools =
     bpython
     plone.reload
@@ -34,3 +35,4 @@ devtools =
 optilux.policy        = fs optilux.policy
 optilux.theme         = fs optilux.theme
 optilux.cinemacontent = fs optilux.cinemacontent
+optilux.facebookauth  = fs optilux.facebookauth
