--- a/versions.cfg
+++ b/versions.cfg
@@ -35,3 +35,7 @@ SQLAlchemy = 0.6.6
 zope.sqlalchemy = 0.6.1
 z3c.saconfig = 0.12
 MySQL-python = 1.2.3
+
+# Beaker
+beaker = 1.5.4
+collective.beaker = 1.0b2
