--- a/versions.cfg
+++ b/versions.cfg
@@ -39,3 +39,8 @@ MySQL-python = 1.2.3
 # Beaker
 beaker = 1.5.4
 collective.beaker = 1.0b2
+
+# Production deployment
+RelStorage = 1.5.0b1
+collective.recipe.supervisor = 0.14
+collective.recipe.template = 1.8
