--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,23 @@ var
 .svn
 *.pyc
 *.pyo
+etc/fastcgi.conf
+etc/fastcgi.conf.default
+etc/fastcgi_params
+etc/fastcgi_params.default
+etc/haproxy.conf
+etc/koi-utf
+etc/koi-win
+etc/mime.types
+etc/mime.types.default
+etc/nginx.conf
+etc/nginx.conf.default
+etc/scgi_params
+etc/scgi_params.default
+etc/server.csr
+etc/server.key.org
+etc/uwsgi_params
+etc/uwsgi_params.default
+etc/varnish.vcl
+etc/win-utf
+etc/zodbpack.conf
