--- a/deployment-minimal.cfg
+++ b/deployment-minimal.cfg
@@ -1,5 +1,8 @@
-# Deployment buildout
-# ===================
+# Minimal deployment buildout
+# ===========================
+#
+# Uses Varnish for proxying, URL rewriting and caching, does not use memcached
+# for sessions or RelStorage caching, and does not support SSL.
 
 [buildout]
 parts =
@@ -11,17 +14,11 @@ parts =
     zodbpack-config
     supervisor
 
-    ${buildout:memcached-parts}
-    ${buildout:haproxy-parts}
     ${buildout:varnish-parts}
-    ${buildout:nginx-parts}
 
 extends =
     packages.cfg
-    buildout.d/memcached.cfg
-    buildout.d/haproxy.cfg
     buildout.d/varnish.cfg
-    buildout.d/nginx.cfg
 
 # Create local caches so that we get completely self-contained buildouts.
 # These directories must be created before the buildout is run the first time.
@@ -55,16 +52,8 @@ always-checkout = false
 [hosts]
 # The public hostname used in virtual hosting, i.e. the public facing domain
 public          = localhost
-# The host that nginx proxies to
-nginx-backend   = ${:varnish}
-# The hostname/address that Varnish binds to
+# Hostname to bind Varnish to (it will use ${ports:http} in this configuration)
 varnish         = localhost
-# The hosts that are allowed to issue PURGE reuqests to Varnish
-allow-purge     = localhost
-# The IP address that Varnish proxies to (do not use a hostname)
-varnish-backend = 127.0.0.1
-# The hostname that HAProxy binds to
-haproxy         = localhost
 # The IP addresses of each Zope instance
 instance1       = 127.0.0.1
 instance2       = 127.0.0.1
@@ -72,8 +61,6 @@ instance3       = 127.0.0.1
 instance4       = 127.0.0.1
 # Where to find the syslog deamon to log to
 syslog          = localhost
-# The hostname that memcached binds to
-memcached       = localhost
 # The hostname where the database server is found
 database        = localhost
 # The hostname that supervisord binds to
@@ -83,28 +70,18 @@ supervisor      = localhost
 # < 1024, you will need to run ./bin/supervisord as root!
 [ports]
 http            = 80
-https           = 443
-nginx-backend   = ${:varnish}
-varnish         = 8100
-varnish-backend = ${:haproxy}
-haproxy         = 8200
-haproxy-stats   = 8222
 instance1       = 8001
 instance2       = 8002
 instance3       = 8003
 instance4       = 8004
 syslog          = 514
-memcached       = 11211
 database        = 3306
 supervisor      = 9001
 
 [users]
-# Process owners for nginx, varnish, haproxy, memcached and Zope
-nginx            = nobody
+# Process owner for Varnish and Zope
 varnish          = nobody
-haproxy          = nobody
 zope-process     = nobody
-memcached        = nobody
 
 # System user accounts for Zope root admin, database access and Supervisor
 zope-admin       = admin
@@ -122,26 +99,22 @@ supervisor-admin = secret
 optilux = optilux
 zodb    = zodb
 
-# How should varnish store its cache? Increase thesize, in megabytes, as required
-[varnish-options]
-storage = malloc,128M
-
 [limits]
 # How many open files are allowed? This affects the number of concurrent
 # connections. On some operating systems, this is set on startup per user
-# as the ulimit
 open-files = 100
 # Timeout of inactivity for Beaker sessions
 session-timeout = 600
 
-[urls]
-# This URL is used in the nginx configuration to serve an error page when
-# HAProxy detects no viable backend
-fallback = /system_error
-
 [sites]
 # Plone site ids - used in virtual hosting
 main = Plone
+
+# Override the Varnish configuration to use the varnish-balancer.vcl template
+[varnish-config]
+recipe = collective.recipe.template
+input = ${buildout:directory}/buildout.d/templates/varnish-balancer.vcl
+output = ${buildout:directory}/etc/varnish.vcl
 
 # Zope instance template
 [instance]
@@ -166,9 +139,9 @@ zcml-additional =
 # Configure Beaker sessions with file storage
 zope-conf-additional =
     <product-config beaker>
-        session.type            ext:memcached
+        session.type            file
+        session.data_dir        ${buildout:directory}/var/sessions/data
         session.lock_dir        ${buildout:directory}/var/sessions/lock
-        session.url             ${hosts:memcached}:${ports:memcached}
         session.key             beaker.session
         session.secret          secret
         session.secure          true
@@ -187,7 +160,6 @@ event-log-custom =
 rel-storage =
     type mysql
     blob-dir ${buildout:directory}/var/blobstorage
-    cache-servers ${hosts:memcached}:${ports:memcached}
     db ${databases:zodb}
     user ${users:database}
     passwd ${passwords:database}
@@ -235,13 +207,9 @@ user = ${users:supervisor-admin}
 password = ${passwords:supervisor-admin}
 serverurl = http://${hosts:supervisor}:${ports:supervisor}
 programs =
-    0  memcached  ${memcached-build:location}/bin/memcached true ${users:memcached}
-    
     10 instance1  ${buildout:directory}/bin/instance1 [console] true ${users:zope-process}
     10 instance2  ${buildout:directory}/bin/instance2 [console] true ${users:zope-process}
     10 instance3  ${buildout:directory}/bin/instance3 [console] true ${users:zope-process}
     10 instance4  ${buildout:directory}/bin/instance4 [console] true ${users:zope-process}
     
-    20 haproxy    ${buildout:directory}/bin/haproxy       [-f ${buildout:directory}/etc/haproxy.conf] true ${users:haproxy}
-    30 varnish    ${varnish-build:location}/sbin/varnishd [-F -s ${varnish-options:storage} -f ${buildout:directory}/etc/varnish.vcl -a ${hosts:varnish}:${ports:varnish} ${varnish-options:tuning}] true ${users:varnish}
-    40 nginx      ${nginx-build:location}/sbin/nginx true
+    30 varnish    ${varnish-build:location}/sbin/varnishd [-F -s ${varnish-options:storage} -f ${buildout:directory}/etc/varnish.vcl -a ${hosts:varnish}:${ports:http} ${varnish-options:tuning}] true ${users:varnish}
