--- a/versions.cfg
+++ b/versions.cfg
@@ -44,3 +44,9 @@ collective.beaker = 1.0b2
 RelStorage = 1.5.0b1
 collective.recipe.supervisor = 0.14
 collective.recipe.template = 1.8
+hexagonit.recipe.cmmi = 1.5.0
+hexagonit.recipe.download = 1.5.0
+plone.recipe.haproxy = 1.1.1
+supervisor = 3.0a9
+meld3 = 0.6.7
+pylibmc = 1.1.1
