--- a/versions.cfg
+++ b/versions.cfg
@@ -50,3 +50,12 @@ plone.recipe.haproxy = 1.1.1
 supervisor = 3.0a9
 meld3 = 0.6.7
 pylibmc = 1.1.1
+
+# LDAP
+python-ldap = 2.3.13
+Products.LDAPMultiPlugins = 1.14
+Products.LDAPUserFolder = 2.19
+Products.PloneLDAP = 1.1
+dataflake.cache = 1.2
+dataflake.ldapconnection = 1.2
+plone.app.ldap = 1.2.5
